--- a/less/spokes.less
+++ b/less/spokes.less
@@ -477,7 +477,7 @@ h2 #radius {
 
 #slogan {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 	margin: 132px 0 16px 16px;
   line-height: 1.25;
   color: #fff;
